# math_ops_lib

./: .gitignore  CMakeLists.txt  README.md  math_ops_examples.ipynb  test_math_ops.py
examples/: demo.c
include/: math_ops.h
output/doc/: report_math_ops.docx  work_log.md
src/: math_ops.c  mo_common.c  mo_common.h  mo_matrix.c  mo_memory.c  mo_scalar.c
tests/: test_math_ops_c.c
